--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,8 +1,10 @@
 siteTitle: Bienestar y Productividad
 siteUrl: 'https://bienestaryproductividad.com.co'
 siteDescription: >-
-  Bienestar y Productividad S.A.S. Expertos en colombia en Riesgo Psicosocial y
-  Segurdiad y Salud en el Trabajo
+  Bienestar y Productividad S.A.S. Gestión del Riesgo Psicosocial: Prevención,
+  Diagnóstico, SVE e Intervención; Talento Humano, Formación en competencias
+  blandas; Salud y Seguridad en el Trabajo, Baile Terapia; Promovemos el Trabajo
+  en Casa
 socialMediaCard:
   image: 'https://ucarecdn.com/a55163cc-3ed1-4ecf-9cdc-50b237b2d65a/'
 googleTrackingId: UA-162787973-1
