Update Settings “global-settings”

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -2,7 +2,7 @@ siteTitle: Bienestar y Productividad
 siteUrl: 'https://bienestaryproductividad.com.co'
 siteDescription: >-
   Bienestar y Productividad S.A.S. Gestión del Riesgo Psicosocial: Prevención,
-  Diagnóstico, SVE e Intervención; Talento Humano, Formación en competencias
+  Diagnóstico, SVE e Intervención; Talento Humano, Capacitación en competencias
   blandas; Salud y Seguridad en el Trabajo, Baile Terapia; Promovemos el Trabajo
   en Casa
 socialMediaCard:
