Update Settings “global-settings”

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -2,9 +2,12 @@ siteTitle: Bienestar y Productividad
 siteUrl: 'https://bienestaryproductividad.com.co'
 siteDescription: >-
   Bienestar y Productividad S.A.S. Gestión del Riesgo Psicosocial: Prevención,
-  Diagnóstico, SVE e Intervención; Talento Humano, Capacitación en competencias
-  blandas; Salud y Seguridad en el Trabajo, Baile Terapia; Promovemos el Trabajo
-  en Casa
+  Diagnóstico, Sistma de Vigilancia Epidemiológica en Riesgo Psicosocial (SVE en
+  RPS) e Intervención; Talento Humano, Capacitación en competencias blandas
+  (Comunicación asertiva, inteligencia emocional, solución de conflictos,
+  negociación, comité de convivencia, administración efectiva del tiempo); Salud
+  y Seguridad en el Trabajo (Salud Ocupacional), Baile Terapia; Promovemos el
+  Trabajo en Casa (Teletrabajo, Home Office)
 socialMediaCard:
   image: 'https://ucarecdn.com/a55163cc-3ed1-4ecf-9cdc-50b237b2d65a/'
 googleTrackingId: UA-162787973-1
