--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -2,8 +2,8 @@ siteTitle: Bienestar y Productividad
 siteUrl: 'https://bienestaryproductividad.com.co'
 siteDescription: >-
   Bienestar y Productividad S.A.S. Gestión del Riesgo Psicosocial: Prevención,
-  Diagnóstico, Sistma de Vigilancia Epidemiológica en Riesgo Psicosocial (SVE en
-  RPS) e Intervención; Talento Humano, Capacitación en competencias blandas
+  Diagnóstico, Sistema de Vigilancia Epidemiológica en Riesgo Psicosocial (SVE
+  en RPS) e Intervención; Talento Humano, Capacitación en competencias blandas
   (Comunicación asertiva, inteligencia emocional, solución de conflictos,
   negociación, comité de convivencia, administración efectiva del tiempo); Salud
   y Seguridad en el Trabajo (Salud Ocupacional), Baile Terapia; Promovemos el
